style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');


* {
    box-sizing: border-box;
}

body {
    font-family: 'Poppins', sans-serif;
    font-size: 15px;

}

header {
    margin: 50px auto;
    max-width: 500px;
    text-align: center;
}

h1 {
    font-weight: 200;
    margin: 0;
}

h1 span {
    font-weight: 600;
}

p{
    color: hsl(229, 6%, 66%);
}

.container {
    display:flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 auto;
    width: 1140px;
}

.box {
    background-color: white;
    box-shadow: 0 10px 20px rgba(0,0,0,0.05), 0 6px 6px rgba(0,0,0,0.1);
    border-radius: 5px;
    position: relative;
    overflow: hidden;
    padding: 30px;
    margin:15px;
    width: 350px;

}

.box::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    height: 5px;
    width:100%;
}

.box-red::after {
background-color:hsl(0, 78%, 62%);
}

.box-cyan::after {
background-color: hsl(180, 62%, 55%);
}
.box-orange::after {
background-color: hsl(34, 97%, 64%);
}

.box-blue::after {
background-color: hsl(212, 86%, 64%);
}

.box h2 {
    margin:0; 

}

.box p {
    font-size: 14px;
    margin:15px 0 30px;
}

.box img {
    display:block;
    margin-left: auto;
}


.attribution { font-size: 11px; text-align: center; }


 .attribution a { color: hsl(228, 45%, 44%); }

